--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "screenshot",
+  "name": "html-to-svg",
   "version": "1.0.0",
-  "description": "Takes screenshot of the given URL.",
+  "description": "saves the given URL to an SVG file",
   "author": "Steren Giannini",
   "scripts": {
     "start": "node server.js"
   },
   "license": "Apache-2.0",
+  "type": "module",
   "dependencies": {
-    "express": "^4.16.4",
-    "puppeteer": "^1.10.0"
+    "express": "^4.17.1",
+    "puppeteer": "^1.20.0"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
